<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="6dp"
            android:text="@string/single_selection"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/im_interested"
            android:textColor="#000000"
            android:textSize="18sp" />

        <com.prox1.video1.download1.chip.ChipRecyclerView
            android:id="@+id/rv_interest_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:multiSelection="false" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/adbox">

        <LinearLayout
            android:id="@+id/linearAdsNative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="top|center"
            android:orientation="vertical" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="6dp"
            android:text="@string/multi_selection"
            android:textColor="#000000"
            android:textSize="25sp"

            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/im_interested"
            android:textColor="#000000"
            android:textSize="15sp" />

        <com.prox1.video1.download1.chip.ChipRecyclerView
            android:id="@+id/rv_interest_multi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:multiSelection="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_category_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/background"
        android:text="NEXT"
        android:textColor="@color/white"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="bottom|center">

        <RelativeLayout
            android:id="@+id/relativeAdsBanner"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|center"
            android:gravity="center|bottom" />

    </LinearLayout>


</LinearLayout>
